--- a/profapp/templates/_ruslan/partials/_header_files_tinymce.html
+++ b/profapp/templates/_ruslan/partials/_header_files_tinymce.html
@@ -6,7 +6,7 @@
 <script src="{{ static_address('tinymce/plugins/tinymce-gallery-plugin/plugin.js') }}"></script>
 
 <script src="{{ static_address('new/angular-ui-tinymce/tinymce.js') }}"></script>
-<script src="{{ static_address('new/angular-ui-slider/slider.js') }}"></script>
+{#<script src="{{ static_address('new/angular-ui-slider/slider.js') }}"></script>#}
 <script>
     pr_angular_modules.push('ui.tinymce');
 </script>
