--- a/profapp/templates/portal/portal_edit.html
+++ b/profapp/templates/portal/portal_edit.html
@@ -4,6 +4,7 @@
     {{ super() }}
     {% include '_ruslan/partials/_header_files_sortable.html' %}
     {% include '_ruslan/partials/_header_files_crop.html' %}
+    {% include '_ruslan/partials/_header_files_tinymce.html' %}
 {% endblock head %}
 
 {% block portal_content %}
@@ -47,7 +48,8 @@
             </div>
 
             <div class="modal-body">
-                <textarea class="w100 h50em" ng-model="custom_html" placeholder=""></textarea>
+                <textarea ui-tinymce="tinymceSimpleOptions"
+                          class="w100 h50em" ng-model="settings.custom_html" placeholder=""></textarea>
             </div>
 
             <div class="modal-footer">
@@ -96,13 +98,40 @@
 
             $scope.$$translate = {{ translates('PortalDivisionCustomHtmlEditHtmlController')|safe }};
 
-            {% raw %}
-            $scope.custom_html = custom_html;
+            $scope.settings = {
+                'custom_html': custom_html ? custom_html : '',
+{#                'image_galleries': image_galleries ? image_galleries : []#}
+            };
+
+            $scope.tinymceSimpleOptions = {
+                inline: false,
+                menu: [],
+                plugins: 'code',
+                skin: 'lightgray',
+                theme: 'modern',
+                'toolbar1': "undo redo | bold italic | alignleft aligncenter alignright alignjustify | styleselect | bullist numlist outdent indent | media link table | code",
+                //'toolbar1': "undo redo | bold italic | alignleft aligncenter alignright alignjustify | styleselect | bullist numlist outdent indent | link image table"[*],
+                'valid_elements': "iframe[*],img[*],table[*],tbody[*],td[*],th[*],tr[*],p[*],h1[*],h2[*],h3[*],h4[*],h5[*],h6[*],div[*],ul[*],ol[*],li[*],strong/b[*],em/i[*],span[*],blockquote[*],sup[*],sub[*],code[*],pre[*],a[*],object[*]",
+{#                'content_css': ['{{ static_address('tinymce/plugins/tinymce-gallery-plugin/plugin.css') }}'],#}
+{#                'gallery_get_data': function (gallery_id) {#}
+{#                    return find_by_id($scope.settings.image_galleries, gallery_id);#}
+{#                },#}
+{#                'gallery_set_data': function (gallery_id, data) {#}
+{#                    var index = find_index_by_id($scope.settings.image_galleries, gallery_id);#}
+{#                    if (index > -1) {#}
+{#                        $scope.settings.image_galleries[index] = data;#}
+{#                    }#}
+{#                    else {#}
+{#                        $scope.settings.image_galleries.push(data);#}
+{#                    }#}
+{#                },#}
+            };
+
             $scope.set = function () {
-                $uibModalInstance.close($scope.custom_html);
+                $uibModalInstance.close($scope.settings);
             };
             $scope.cancel = $uibModalInstance.dismiss;
-            {% endraw %}
+
         });
 
         module.controller('portal_edit', ['$scope', '$uibModal', function ($scope, $uibModal) {
@@ -119,17 +148,16 @@
             $scope.publications_counts_by_status_and_visibility_cell = publications_counts_by_status_and_visibility_cell;
             $scope.publications_counts_by_status_and_visibility_tooltip = publications_counts_by_status_and_visibility_tooltip;
 
-            $scope.setCustomHtml  = function (d) {
+            $scope.setCustomHtml = function (d) {
                 var modalInstance = $uibModal.open({
                     templateUrl: 'portal_division_custom_html.html',
                     controller: 'PortalDivisionCustomHtmlEditHtmlController',
                     resolve: resolveDictForAngularController({
-                        custom_html: d.settings.custom_html
+                        custom_html: d.settings['custom_html']
                     })
                 });
-                modalInstance.result.then(function (new_html) {
-                    console.log(new_html);
-                    d.settings.custom_html = new_html;
+                modalInstance.result.then(function (settings) {
+                    d.settings = settings;
                 });
             };
 
@@ -298,7 +326,8 @@
                             <div>
                                 <label>{{ ::_('Host') }}</label>
                                 <a class="form-control border-none oh nowrap" target="_blank"
-                                   ng-href="{{ protocol }}//{{ data.portal.host_profi_or_own === 'own'?data.portal.host_own:(data.portal.host_profi + '.' + MAIN_DOMAIN) }}">{{ protocol }}//{{
+                                   ng-href="{{ protocol }}//{{ data.portal.host_profi_or_own === 'own'?data.portal.host_own:(data.portal.host_profi + '.' + MAIN_DOMAIN) }}">{{
+                                    protocol }}//{{
                                     data.portal.host_profi_or_own ===
                                     'own'?data.portal.host_own:(data.portal.host_profi + '.' + MAIN_DOMAIN) }}<span
                                             class="fa fa-external-link pr-external-link"></span></a>
@@ -400,9 +429,11 @@
                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 p025em">
                                 <div class="dib border-none"
                                      pr-validation-answer="data_validation:divisions[division.id].settings">
-                                    <span tooltip-append-to-body="true" tooltip-class="pr-grid-tooltip-class" tooltip-animation="false"
-                                            uib-tooltip-html="publications_counts_by_status_and_visibility_tooltip(division.publication_count)" ng-bind-html="publications_counts_by_status_and_visibility_cell(division.publication_count)|html"
-                                            ng-if="division.portal_division_type_id == 'events' || division.portal_division_type_id == 'news'">
+                                    <span tooltip-append-to-body="true" tooltip-class="pr-grid-tooltip-class"
+                                          tooltip-animation="false"
+                                          uib-tooltip-html="publications_counts_by_status_and_visibility_tooltip(division.publication_count)"
+                                          ng-bind-html="publications_counts_by_status_and_visibility_cell(division.publication_count)|html"
+                                          ng-if="division.portal_division_type_id == 'events' || division.portal_division_type_id == 'news'">
 
                                     </span>
                                     <select
@@ -420,7 +451,9 @@
                                             pr-validation-answer="data_validation:divisions[division.id].settings"
                                             class="form-control"
                                             ng-click="setCustomHtml(division)"
-                                            ng-if="division.portal_division_type_id == 'custom_html'">{{ ::_('set html') }}</button>
+                                            ng-if="division.portal_division_type_id == 'custom_html'">{{ ::_('set html')
+                                        }}
+                                    </button>
                                 </div>
                             </div>
                             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 p025em">
