file browser hidden

--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -110,7 +110,7 @@
                             title="{{ ::_('Companies') }}"
                             ng-class="{'selected': selected_user_menu == 'companies'}"><i
                             class="fa fa-building-o"></i><span>{{ _('Компанії') }}</span></a></li>
-                    <li class="dropdown" ng-if="user"><a {% endraw %}{{ tbvm() }}{% raw %} href=""
+                    <li class="dropdown" ng-if="0"><a {% endraw %}{{ tbvm() }}{% raw %} href=""
                                                                                            ng-click="open_filemanager()"
                                                                                            title="{{ _('File manager') }}"
                                                                                            ng-class="{'selected': selected_user_menu == 'file_manager'}"><i
