--- a/profapp/templates/front/Forester/layout.html
+++ b/profapp/templates/front/Forester/layout.html
@@ -8,12 +8,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="{{ portal.favicon.url }}" type="image/x-icon"/>
         <title>{% block title %}{{ seo.title }}{% endblock %}</title>
-        <meta name="description" content="{% block description %}{{ seo.description }}{% endblock %}">
+        <meta name="description" content="{% block description %}{{ seo.description|strip_tags|trim }}{% endblock %}">
         <meta name="keywords" content="{% block keywords %}{{ seo.keywords }}{% endblock %}">
         {% block og -%}
             <meta property="og:site_name" content="{% block og_name %}{{ portal.name }}{% endblock %}"/>
             <meta property="og:title" content="{% block og_title %}{{ self.title()|trim }}{% endblock %}"/>
-            <meta property="og:description" content="{% block og_description %}{{ self.description()|trim }}{% endblock %}"/>
+            <meta property="og:description" content="{% block og_description %}{{ self.description()|strip_tags|trim }}{% endblock %}"/>
             <meta property="og:image:width" content="300"/>
             <meta property="og:image:height" content="300"/>
             <meta property="og:image" content="{{ g.protocol }}{% block og_img_url %}{{ seo.image_url if seo.image_url else portal.logo.url }}{% endblock %}"/>
