material editor page clean up

--- a/profapp/templates/_ruslan/partials/_header_files_tinymce.html
+++ b/profapp/templates/_ruslan/partials/_header_files_tinymce.html
@@ -10,3 +10,8 @@
 <script>
     pr_angular_modules.push('ui.tinymce');
 </script>
+<style>
+    .mce-branding-powered-by {
+        display: none;
+    }
+</style>
