--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -65,12 +65,11 @@
                     </div>
 
                 </div>
-                <a target="_blank" type="link"
+                <a target="_blank" type="link" ng-if="article.illustration.selected_by_user.type !== 'none'"
                    ng-href="{{ article.external_url?article.external_url:url_publication_details({'publication_id': article.id, 'publication_title': article.title}, article.portal_division.portal.host) }}">
-                    <img class="list-reader-image" pr-image-url="{{ article.illustration.url }}"
-                         alt="img">
+                    <img class="list-reader-image" pr-image-url="{{ article.illustration.url }}">
                 </a>
-
+                <h5 ng-if="article.illustration.selected_by_user.type === 'none'" >&nbsp;</h5>
                 <div class="item-short-content">
                     <h3 class="item-title">
                         <a target="_blank"
@@ -78,7 +77,6 @@
                             article.title}}<i ng-if="article.external_url" class="fa fa-external-link ml05em"></i></a>
                     </h3>
                     <div ng-bind-html="article.short"></div>
-                    <div ng-visible="article.author" class="fr">{{ article.author }}</div>
                 </div>
                 <br/>
                 <table class="w100 noselect">
