--- a/profapp/templates/front/Forester/article_thumbnail.html
+++ b/profapp/templates/front/Forester/article_thumbnail.html
@@ -6,7 +6,7 @@
                 <a href="{{ article['external_url'] if article['external_url'] else url_for('front.article_details', publication_id=article['id'], publication_title=article['title']) }}">
                     {% if article['illustration']['selected_by_user']['type'] != 'none' %}
                         <img class="img-responsive" src="{{ article['illustration']['url'] }}"/>{% else %}
-                        <img class="img-responsive" src="assets/img/no-image.jpg">
+                        <img class="img-responsive" src="{{ static_address('front/' + portal.layout.name + '/img/article-no-image.jpg') }}">
                     {% endif %}
                 </a>
             </div>
